<resources>
    <string name="app_name">M_Hike</string>
    <string name="hiking_details_form">Hiking Details Form</string>
    <string name="enter_hike_name">Enter name of hike</string>
    <string name="enter_location">Enter Location</string>
    <string name="select_hike_date">Select Date of Hike</string>
    <string name="km">Km</string>
    <string name="parking_available">Parking available</string>
    <string name="select_diffficulty">Select Diffficulty</string>
    <string name="end_point">End Point</string>
    <string name="start_point">Start Point</string>
    <string name="edit_hiking_details">Edit Hiking Details</string>
    <string name="add_observation">Add Observation</string>
    <string name="edit_observation">Edit Observation</string>
    <string name="sightings_of_animals">Sightings of animals</string>
    <string name="types_of_vegetation">Types of vegetation</string>
    <string name="weather_conditions">Weather conditions</string>
    <string name="conditions_of_the_trails">Conditions of the trails</string>
    <string name="select_observation_date">Select Observation Date</string>
    <string name="select_observation_time">Select Observation Time</string>
    <string name="save">Save</string>
    <string name="additional_comments">Additional comments</string>
    <string name="hike_details">Hike Details</string>
    <string name="hike_name">Hike Name</string>
    <string name="location">Location</string>
    <string name="date_of_hike">Date of Hike</string>
    <string name="length_of_hike">Length of Hike</string>
    <string name="difficulty">Difficulty</string>
    <string name="description">Description</string>
    <string name="observation_list">Observation List</string>
    <string name="hike_list">Hike List</string>
    <string name="delete_all_hike">Delete All Hike</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_length_of_hike">Enter Length of Hike</string>
    <string name="delete_all_observation">Delete All Observation</string>
    <string name="search_hike">Search Hike</string>
    <string name="search_hike1">Search hike</string>
    <string name="conditions_of_trails">Conditions of trails</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_hiking_details">Add Hiking Details</string>
    <string name="there_is_no_observation">There is no observation.</string>
    <string name="no_hike_record_found">No hike record found!</string>
    <string name="no_observation_record_found">No observation record found!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_date">Enter Date</string>
    <string name="filtered_hike_list">Filtered Hike List</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="weather">Weather</string>
    <string name="filter_hike">Filter Hike</string>
</resources>