<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterHikeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clToolBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/ivBack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_back"
            app:tint="@color/black"
            android:paddingHorizontal="16dp"
            android:paddingVertical="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name" />
        <TextView
            android:text="@string/filter_hike"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ivBack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/clToolBar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilHikeName"
            android:layout_marginTop="10dp"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/edittext_box_stroke_color"
            android:hint="@string/enter_hike_name"
            app:hintTextColor="@color/edittext_box_stroke_color"
            android:textColorHint="@color/text_grey_color"
            app:boxStrokeWidth="1.5dp"
            app:boxStrokeWidthFocused="1.5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etHikeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLocation"
            android:layout_marginTop="15dp"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/edittext_box_stroke_color"
            app:boxStrokeWidth="1.5dp"
            app:boxStrokeWidthFocused="1.5dp"
            android:hint="@string/enter_location"
            app:hintTextColor="@color/edittext_box_stroke_color"
            android:textColorHint="@color/text_grey_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDate"
            android:layout_marginTop="15dp"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/edittext_box_stroke_color"
            app:boxStrokeWidth="1.5dp"
            app:boxStrokeWidthFocused="1.5dp"
            android:hint="@string/enter_date"
            app:hintTextColor="@color/edittext_box_stroke_color"
            android:textColorHint="@color/text_grey_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbFilterHike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="35dp"
            android:paddingVertical="12dp"
            android:layout_gravity="center"
            app:iconGravity="textStart"
            app:icon="@drawable/ic_filter"
            android:backgroundTint="@color/blue"
            android:text="Filter"
            android:textSize="14sp"
            app:cornerRadius="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>